# T_RECAP

./: LICENSE  README.md
Demo_RTL/: hex7seg.sv  sample_tick.sv  top.sv
bit_accurate_golden_model/: phase1_golden.cpp  viz.py
phase1_demo/: 260124_T_RECAP_Golden_v0.py  260126_T_RECAP_Golden_v1.py  260130_T_RECAP_Golden_MS_Test_V3.py  tb_dump_pairs_csv.sv
phase1_demo/architecture/: de10_lite_pins.qsf  t_recap_demo_top.sv
phase1_demo/bit_accurate_golden_model/: phase1_golden.cpp  viz.py
phase1_demo/verification/: bind_taps.sv  board_driver.sv  board_if.sv  cov_phase1.sv  golden_files_loader.sv  (+20 more)
phase2/: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
phase2/architecture/: phase2_top.sv  t_recap_phase2_core.sv  t_recap_phase2_top.sv
phase2/artifacts/coefficients/: coeff_manifest.json  twiddle_im.memh  twiddle_inv_im.memh  twiddle_inv_re.memh  window_qw.memh
phase2/artifacts/golden/impulse_Ns1024_thr0/: frame_stats.csv  y_out.memh
phase2/artifacts/golden/near_threshold_multitone_Ns1024_thr64/: bin_stats.csv  frame_stats.csv  y_out.memh
phase2/artifacts/golden/zero_Ns4096_thr0/: frame_stats.csv  y_out.memh
phase2/artifacts/manifests/: artifact_index.json  core_config_snapshot.json  frozen_release_manifest.json  quality_bounds.json
phase2/artifacts/test_vectors/: test_vectors.json
phase2/artifacts/test_vectors/impulse_Ns1024_thr0/: config.json  x_in.memh
phase2/artifacts/test_vectors/near_threshold_multitone_Ns1024_thr64/: config.json  x_in.memh
phase2/artifacts/test_vectors/zero_Ns4096_thr0/: config.json
phase2/ci/github/: artifact_check.yml  reproducibility.yml
phase2/configs/releases/: phase2_revJ_dev.json
phase2/configs/suites/: debug_near_threshold.json  signoff_minimal.json  smoke.json
phase2/configs/vectors/: exact_bin_tone_sweep.json  high_amplitude_headroom.json  near_threshold_multitone.json  noise_only_xorshift32.json  zero_Ns4096_thr0.json
phase2/docs/: artifact_contract.md  canonical_memh_hashing.md  dev_guide.md  fixed_point_widths.md  quality_bounds_process.md  stft_wola_contract.md  vector_freeze_process.md
phase2/golden_model/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  frame_stats.csv  metrics.json  phase2_golden_model  phase2_golden_model.cpp  phase2_viz.py  pyproject.toml  x_in.memh  y_out.memh
phase2/golden_model/ci/docker/: Dockerfile  README.md
phase2/golden_model/ci/github/: build.yml  lint.yml
phase2/golden_model/configs/releases/: phase2_revJ_signoff.json
phase2/golden_model/configs/suites/: signoff_full.json
phase2/golden_model/configs/vectors/: impulse_step.json  no_suppression_multitone_thr0.json  off_bin_tone_sweep.json  short_finite_stream.json
phase2/golden_model/docs/: arithmetic_contract.md  fft_ifft_contract.md  golden_model_overview.md  release_process.md
phase2/golden_model/include/trecap_golden/: artifact_checker.hpp  artifact_writer.hpp  canonical_hash.hpp  finite_stream.hpp  fixed_point.hpp  generators.hpp  hermitian.hpp  ifft_radix2_int.hpp  json_io.hpp  mask.hpp  memh.hpp  metrics.hpp  q_format.hpp  saturation.hpp  stft_wola_model.hpp  twiddles.hpp
phase2/golden_model/python/trecap_golden/artifacts/: __init__.py  csv_io.py  hashes.py  manifests.py
phase2/golden_model/python/trecap_golden/cli/: __init__.py  artifact_check.py  freeze_release.py  gen_vectors.py  run_suite.py
phase2/golden_model/python/trecap_golden/contracts/: __init__.py  contract_paths.py  schema_loader.py  schema_validate.py
phase2/golden_model/python/trecap_golden/generators/: __init__.py  constant.py  sine.py  step.py  xorshift32.py
phase2/golden_model/python/trecap_golden/plots/: coefficient_plots.py  suite_plots.py  vector_plots.py
phase2/golden_model/scripts/: bootstrap.sh  clean_outputs.sh  lint.sh  regenerate_all.sh
phase2/golden_model/spec/schemas/: artifact_index.schema.json  bin_stats.schema.md  coeff_manifest.schema.json  core_config.schema.json  frozen_release_manifest.schema.json  metrics.schema.json  test_vectors.schema.json  vector_config.schema.json
phase2/golden_model/src/: artifact_writer.cpp  canonical_hash.cpp  complex_int.cpp  fixed_point.cpp  hermitian.cpp  mask.cpp  rounding.cpp  saturation.cpp  signed_int.cpp  widths.cpp
phase2/golden_model/tests/cpp/: test_fixed_point.cpp  test_mask.cpp  test_memh.cpp  test_saturation.cpp  test_wola_small.cpp
phase2/golden_model/tests/golden_selfcheck/: README.md
phase2/golden_model/tests/python/: test_hash_memh.py  test_vector_configs.py
phase2/golden_model/tools/: _trecap_tool_common.py  artifact_check.py  compare_artifacts.py  gen_coeffs.py  make_quality_bounds.py  package_artifacts.py  plot_coefficients.py  plot_suite.py  plot_vector.py
phase2/include/trecap_golden/: coeffs.hpp  complex_int.hpp  csv_io.hpp  fft_radix2_int.hpp  rounding.hpp  signed_int.hpp  version.hpp  widths.hpp  window.hpp
phase2/legacy/phase1/: README.md
phase2/python/trecap_golden/: __init__.py
phase2/python/trecap_golden/artifacts/: checker.py  memh.py
phase2/python/trecap_golden/cli/: _tool_adapter.py  gen_coeffs.py
phase2/python/trecap_golden/generators/: cosine.py  impulse.py  multitone.py
phase2/python/trecap_golden/plots/: __init__.py  artifact_data.py
phase2/scripts/: check_reproducible.sh  ci_entrypoint.sh  format.sh
phase2/spec/schemas/: frame_stats.schema.md  quality_bounds.schema.json
phase2/src/: artifact_checker.cpp  coeffs.cpp  csv_io.cpp  fft_radix2_int.cpp  finite_stream.cpp  generators.cpp  ifft_radix2_int.cpp  json_io.cpp  memh.cpp  metrics.cpp  q_format.cpp  stft_wola_model.cpp  twiddles.cpp  version.cpp  window.cpp
phase2/tests/cpp/: test_artifact_checker.cpp  test_fft_known_cases.cpp  test_hash.cpp  test_hermitian.cpp  test_qcoef.cpp  test_rounding.cpp
phase2/tests/golden_selfcheck/: smoke_suite_expected_manifest.json
phase2/tests/python/: test_generator_determinism.py  test_release_manifest.py  test_schema_validation.py
phase2/tools/: freeze_release.py  gen_vectors.py  hash_memh.py  inspect_frame_stats.py  inspect_memh.py  phase2_golden_model.cpp  plot_all.py  run_suite.py  run_vector.py
