[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trecap-golden"
version = "0.1.0"
description = "T-RECAP Phase 2 golden-model artifact tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sigma Force" }
]
keywords = [
  "fixed-point",
  "golden-model",
  "stft",
  "wola",
  "fpga",
  "artifact-signoff"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "attrs>=24.0",
  "jsonschema>=4.23",
  "numpy>=2.0",
  "pydantic>=2.9",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "black>=24.10",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]


[project.scripts]
trecap-gen-coeffs = "trecap_golden.cli.gen_coeffs:main"
trecap-gen-vectors = "trecap_golden.cli.gen_vectors:main"
trecap-run-suite = "trecap_golden.cli.run_suite:main"
trecap-artifact-check = "trecap_golden.cli.artifact_check:main"
trecap-freeze-release = "trecap_golden.cli.freeze_release:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["trecap_golden*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  \.git
| \.mypy_cache
| \.pytest_cache
| \.ruff_cache
| \.venv
| build
| dist
| out
| runs
| artifacts
| legacy
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["python", "tools", "scripts", "tests/python"]
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "out",
  "runs",
  "artifacts",
  "legacy",
]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "PLR0913",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"tools/*.py" = ["T201"]
"scripts/*.py" = ["T201"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/python"]
norecursedirs = [".git", ".venv", "build", "out", "runs", "artifacts", "legacy"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-ra",
]

[tool.coverage.run]
branch = true
source = ["python/trecap_golden"]
omit = [
  "python/trecap_golden/generated/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
mypy_path = "python"
files = ["python", "tools", "scripts", "tests/python"]
exclude = [
  "^python/trecap_golden/generated/",
  "^build/",
  "^out/",
  "^runs/",
  "^artifacts/",
  "^legacy/",
]

[[tool.mypy.overrides]]
module = [
  "jsonschema.*",
  "numpy.*",
]
ignore_missing_imports = true
